--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "framer-motion": "^11.3.2",
+    "json-server": "^1.0.0-beta.1",
     "next": "14.2.5",
+    "openai": "^4.52.7",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1"
