--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@prisma/client": "^5.16.2",
     "@xata.io/client": "^0.0.0-next.v64f10283eb9a098c575590d3ea17600e350321c9",
     "framer-motion": "^11.3.2",
+    "inngest": "^3.21.0",
     "json-server": "^1.0.0-beta.1",
     "next": "14.2.5",
     "openai": "^4.52.7",
